--- a/assets/scss/common/_var.scss
+++ b/assets/scss/common/_var.scss
@@ -23,6 +23,14 @@ $button-memorial-contact-border-color: #707070;
 $slider-arrow-color: #FFFFFF;
 $about-border-color: #272727;
 $about-item-border-color: #707070;
+$triangle-color: #7E7D7D;
+$triangle-hover-color: #FFFFFF;
+$modal-window-bg-color: #343434;
+$modal-window-color: #FFFFFF;
+$modal-window-button-color: #272727;
+$modal-window-button-hover-color: #FFFFFF;
+$modal-window-button-bg-color: #E6E6E6;
+$modal-window-button-hover-bg-color: #707070;
 
 $contents-width: 1320px;
 
